# pdi-controller

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  commitlint.config.js  conanfile.txt  package-lock.json  package.json
.github/workflows/: ci.yml
.husky/: pre-commit
src/: CMakeLists.txt  main.c  rabbit_main.cpp
src/utils/: internals.cpp  internals.h  io.cpp  io.h  logger.cpp  logger.h
tests/: CMakeLists.txt  proto_to_fix_test.cpp
tools/: generate_code_coverage  install_dependencies
